# stack

./: ChangeLog.md  stack-ghc-9.12.4.yaml  stack-ghc-9.14.1.yaml  stack.yaml
tests/integration/tests/lock-files/: Main.hs
tests/integration/tests/lock-files/files/: stack1.yaml  stack2.yaml
tests/integration/tests/module-added-multiple-times/: Main.hs
tests/integration/tests/module-added-multiple-times/files/app/: Main.hs
tests/integration/tests/module-added-multiple-times/files/src/Lib/: Lib.hs
tests/integration/tests/multi-test/: Main.hs
tests/integration/tests/multi-test/files/: .gitignore  multi-test-suite.cabal  myPackageA.cabal  package.yaml  stack.yaml
tests/integration/tests/multi-test/files/cyclic/: cyclic.cabal
tests/integration/tests/multi-test/files/myPackageA/: package.yaml
tests/integration/tests/multi-test/files/myPackageB/: cyclic.cabal  package.yaml
tests/integration/tests/multi-test/files/myPackageC/: myPackageC.cabal  package.yaml
tests/integration/tests/multi-test/files/sub-package/: sub-package.cabal
tests/integration/tests/mutable-deps/: Main.hs
tests/integration/tests/mutable-deps/files/: package.yaml  stack.yaml
tests/integration/tests/mutable-deps/files/app/: Main.hs
tests/integration/tests/mutable-deps/files/src/: Lib.hs
tests/integration/tests/nice-resolver-names/: Main.hs
tests/integration/tests/no-rerun-tests/: Main.hs
tests/integration/tests/no-rerun-tests/files/: .gitignore
tests/integration/tests/no-rerun-tests/files/test/: Main.hs
tests/integration/tests/override-compiler/: Main.hs
tests/integration/tests/proper-rebuilds/: Main.hs
tests/integration/tests/proper-rebuilds/files/app/: Main.hs
tests/integration/tests/proper-rebuilds/files/src/: Lib.hs  Lib.v2
tests/integration/tests/relative-script-snapshots/: Main.hs
tests/integration/tests/relative-script-snapshots/files/subdir/: mySnapshot.yaml  script.hs
tests/integration/tests/sanity/: Main.hs
tests/integration/tests/script-extra-dep/: Main.hs
tests/integration/tests/script-extra-dep/files/: script.hs
tests/integration/tests/skip-unreachable-dirs/: Main.hs
tests/integration/tests/skip-unreachable-dirs/files/: .gitignore
tests/integration/tests/stackage-3185-ignore-bounds-in-snapshot/: Main.hs
tests/integration/tests/stackage-3185-ignore-bounds-in-snapshot/files/: mySnapshot.yaml  package.yaml  stack1.yaml  stack2.yaml
tests/integration/tests/upload/: Main.hs
tests/integration/tests/upload/files/: FakeHackage.hs  package.yaml  stack.yaml
tests/integration/tests/variables-in-template-file-names/: Main.hs
tests/integration/tests/watched-files/: Main.hs
tests/integration/tests/watched-files/files/: .gitignore
tests/integration/tests/watched-files/files/app/: Main.hs
