name:                myPackageA
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5, cyclic
  default-language:    Haskell2010

executable multi-test-suite-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , myPackageA
  default-language:    Haskell2010

test-suite multi-test-suite-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , myPackageA
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite multi-test-suite-test-2
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test-2
  main-is:             Spec.hs
  build-depends:       base
                     , myPackageA
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite multi-test-suite-test-3
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test-3
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
