name:                cyclic
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Cyclic
  build-depends:       base >=4.8 && <5.0
  default-language:    Haskell2010

test-suite cyclic-test-suite
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  build-depends:       base
                     , multi-test-suite
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
