name:                myPackageC
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable sub-package-exe
  hs-source-dirs:      src
  main-is:             main.hs
  other-modules:       Lib2
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite sub-package-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src, test
  main-is:             Spec.hs
  other-modules:       Lib2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , myPackageA
  default-language:    Haskell2010
